--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=tfg
+spring.datasource.url=jdbc:mysql://localhost:3306/nombre_basedatos?useSSL=false&serverTimezone=UTC
+spring.datasource.username=usuario_mysql
+spring.datasource.password=contraseña_mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
