--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=tfg
-spring.datasource.url=jdbc:mysql://localhost:3306/tfg?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/bbdd_libros?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=[password]
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8080
